# kaggle-capstone-contractguard

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  QUICK_START_GUIDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20241201_000000_initial_schema.py
data/documents/: README.md
data/documents/sample/: master_services_agreement.md
deploy/: Dockerfile  cloudbuild.yaml  docker-compose.yml
examples/: test_queries.md
examples/contracts/: README.md  sample_nda.md
frontend/: README.md
frontend/templates/: index.html
scripts/: md_to_pdf.py
src/: __init__.py  config.py  main.py
src/a2a/: __init__.py  agent_card.py  client.py  server.py
src/agents/: __init__.py  compare_agent.py  orchestrator.py  rag_agent.py  report_agent.py  risk_agent.py
src/api/: __init__.py  evaluation.py  tasks.py  websocket.py
src/core/: __init__.py  database.py  long_running.py  redis_client.py
src/evaluation/: __init__.py  evaluator.py  test_cases.py
src/mcp/: __init__.py  server.py  toolset.py
src/memory/: __init__.py  memory_bank.py  session_service.py
src/models/: __init__.py  document.py  user.py
src/observability/: __init__.py  logger.py  metrics.py  tracer.py
src/services/: __init__.py  chunking_service.py  embedding_service.py  storage_service.py  vector_service.py
src/templates/: __init__.py  compare_agent.yaml  orchestrator.yaml  rag_agent.yaml  report_agent.yaml  risk_agent.yaml  simple_agent.yaml
src/tools/: __init__.py  analysis_tool.py  google_search_tool.py  report_tool.py  search_tool.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_services.py
tests/unit/: __init__.py  test_chunking.py  test_config.py  test_tools.py
